# Capstone-Project

./: .breakpoints  .gitignore  README.md  convert.py  data.py  database.py  main.py  nyjc_computing.db  pyproject.toml  sql.py  storage.py  test.py  test.replit  validate.py
csv/: class.csv  club.csv  student.csv  student_subject.csv  subject.csv
static/styles/: style.css
templates/: add.html  edit.html  index.html  splash.html  view.html
